fix: compiling errors because of incorrect imports